feat: 审计日志 mock 补全、改密功能、批量选中指示器
- 新增审计日志 mock（登录日志/错误日志/权限变更日志）及视图 columnOverrides
- 新增改密后端：ChangePasswordCommand、UsersService 接口、UsersServiceImpl、/users/change-password 端点
- 新增改密前端：Profile 页修改密码卡片 + mock handler
- Table 工具栏新增已选N条 Tag 指示器，支持一键清空选中

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>